@@ -32,6 +32,7 @@ modules 3.3.0
 	  certain paths and config files.
 	* Removed the $MODULESHOME env.var. which is not used at all.
 	* Fixed the "module purge" memory corruption (Poor Yorick)
+	* Removed the RegExp code from cmdPath.c (Poor Yorick)
 	* Isolated calls to the new interpreter and get & set env.vars.
 	* Fixed unload & load of same module problem.
 
